Panels (#1825)
* Redesign Swing panel layout - each track now has an associated panel and scrollbar if it's content height requires it.
* Many bug fixes and UI improvements